tests/build/property_macro/fail/args_count_prefix_is.rs
use zero_ui::core::{property, UiNode};

#[property(context)]
pub fn is_state_wrong_input_count(child: impl UiNode) -> impl UiNode { 
    child
}

fn main() { }